lucene/expressions/src/java/org/apache/lucene/expressions/js/JavascriptParser.java
// ANTLR GENERATED CODE: DO NOT EDIT

package org.apache.lucene.expressions.js;
    
import java.text.ParseException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked", "cast"})
class JavascriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_ADD", "AT_BIT_AND", "AT_BIT_NOT", "AT_BIT_OR", "AT_BIT_SHL", "AT_BIT_SHR", "AT_BIT_SHU", "AT_BIT_XOR", "AT_BOOL_AND", "AT_BOOL_NOT", "AT_BOOL_OR", "AT_CALL", "AT_COLON", "AT_COMMA", "AT_COMP_EQ", "AT_COMP_GT", "AT_COMP_GTE", "AT_COMP_LT", "AT_COMP_LTE", "AT_COMP_NEQ", "AT_COND_QUE", "AT_DIVIDE", "AT_DOT", "AT_LPAREN", "AT_MODULO", "AT_MULTIPLY", "AT_NEGATE", "AT_RPAREN", "AT_SUBTRACT", "DECIMAL", "DECIMALDIGIT", "DECIMALINTEGER", "EXPONENT", "HEX", "HEXDIGIT", "ID", "OCTAL", "OCTALDIGIT", "WS"
    };

    public static final int EOF=-1;
    public static final int AT_ADD=4;
    public static final int AT_BIT_AND=5;
    public static final int AT_BIT_NOT=6;
    public static final int AT_BIT_OR=7;
    public static final int AT_BIT_SHL=8;
    public static final int AT_BIT_SHR=9;
    public static final int AT_BIT_SHU=10;
    public static final int AT_BIT_XOR=11;
    public static final int AT_BOOL_AND=12;
    public static final int AT_BOOL_NOT=13;
    public static final int AT_BOOL_OR=14;
    public static final int AT_CALL=15;
    public static final int AT_COLON=16;
    public static final int AT_COMMA=17;
    public static final int AT_COMP_EQ=18;
    public static final int AT_COMP_GT=19;
    public static final int AT_COMP_GTE=20;
    public static final int AT_COMP_LT=21;
    public static final int AT_COMP_LTE=22;
    public static final int AT_COMP_NEQ=23;
    public static final int AT_COND_QUE=24;
    public static final int AT_DIVIDE=25;
    public static final int AT_DOT=26;
    public static final int AT_LPAREN=27;
    public static final int AT_MODULO=28;
    public static final int AT_MULTIPLY=29;
    public static final int AT_NEGATE=30;
    public static final int AT_RPAREN=31;
    public static final int AT_SUBTRACT=32;
    public static final int DECIMAL=33;
    public static final int DECIMALDIGIT=34;
    public static final int DECIMALINTEGER=35;
    public static final int EXPONENT=36;
    public static final int HEX=37;
    public static final int HEXDIGIT=38;
    public static final int ID=39;
    public static final int OCTAL=40;
    public static final int OCTALDIGIT=41;
    public static final int WS=42;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public JavascriptParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public JavascriptParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return JavascriptParser.tokenNames; }
    public String getGrammarFileName() { return "src/java/org/apache/lucene/expressions/js/Javascript.g"; }



    @Override
    public void displayRecognitionError(String[] tokenNames, RecognitionException re) {
        String message;

        if (re.token == null) {
            message = " unknown error (missing token).";
        }
        else if (re instanceof UnwantedTokenException) {
            message = " extraneous " + getReadableTokenString(re.token)
                    +  " at position (" + re.charPositionInLine + ").";
        }
        else if (re instanceof MissingTokenException) {
            message = " missing " + getReadableTokenString(re.token)
                    +  " at position (" + re.charPositionInLine + ").";
        }
        else if (re instanceof NoViableAltException) {
            switch (re.token.getType()) {
            case EOF:
                message = " unexpected end of expression.";
                break;
            default:
                message = " invalid sequence of tokens near " + getReadableTokenString(re.token)
                        +  " at position (" + re.charPositionInLine + ").";
                break;
            }
        }
        else {
            message = " unexpected token " + getReadableTokenString(re.token) 
                    +  " at position (" + re.charPositionInLine + ").";
        }
        ParseException parseException = new ParseException(message, re.charPositionInLine);
        parseException.initCause(re);
        throw new RuntimeException(parseException);
    }

    public static String getReadableTokenString(Token token) {
        if (token == null) {
            return "unknown token";
        }

        switch (token.getType()) {
        case AT_LPAREN:
            return "open parenthesis '('";
        case AT_RPAREN:
            return "close parenthesis ')'";
        case AT_COMP_LT:
            return "less than '<'";
        case AT_COMP_LTE:
            return "less than or equal '<='";
        case AT_COMP_GT:
            return "greater than '>'";
        case AT_COMP_GTE:
            return "greater than or equal '>='";
        case AT_COMP_EQ:
            return "equal '=='";
        case AT_NEGATE:
            return "negate '!='";
        case AT_BOOL_NOT:
            return "boolean not '!'";
        case AT_BOOL_AND:
            return "boolean and '&&'";
        case AT_BOOL_OR:
            return "boolean or '||'";
        case AT_COND_QUE:
            return "conditional '?'";
        case AT_ADD:
            return "addition '+'";
        case AT_SUBTRACT:
            return "subtraction '-'";
        case AT_MULTIPLY:
            return "multiplication '*'";
        case AT_DIVIDE:
            return "division '/'";
        case AT_MODULO:
            return "modulo '%'";
        case AT_BIT_SHL:
            return "bit shift left '<<'";
        case AT_BIT_SHR:
            return "bit shift right '>>'";
        case AT_BIT_SHU:
            return "unsigned bit shift right '>>>'";
        case AT_BIT_AND:
            return "bitwise and '&'";
        case AT_BIT_OR:
            return "bitwise or '|'";
        case AT_BIT_XOR:
            return "bitwise xor '^'";
        case AT_BIT_NOT:
            return "bitwise not '~'";
        case ID:
            return "identifier '" + token.getText() + "'";
        case DECIMAL:
            return "decimal '" + token.getText() + "'";
        case OCTAL:
            return "octal '" + token.getText() + "'";
        case HEX:
            return "hex '" + token.getText() + "'";
        case EOF:
            return "end of expression";
        default:
            return "'" + token.getText() + "'";
        }
    }



    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:250:1: expression : conditional EOF !;
    public final JavascriptParser.expression_return expression() throws RecognitionException {
        JavascriptParser.expression_return retval = new JavascriptParser.expression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        JavascriptParser.conditional_return conditional1 =null;


        CommonTree EOF2_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:251:5: ( conditional EOF !)
            // src/java/org/apache/lucene/expressions/js/Javascript.g:251:7: conditional EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_conditional_in_expression737);
            conditional1=conditional();

            state._fsp--;

            adaptor.addChild(root_0, conditional1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_expression739); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"


    public static class conditional_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditional"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:254:1: conditional : logical_or ( AT_COND_QUE ^ conditional AT_COLON ! conditional )? ;
    public final JavascriptParser.conditional_return conditional() throws RecognitionException {
        JavascriptParser.conditional_return retval = new JavascriptParser.conditional_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AT_COND_QUE4=null;
        Token AT_COLON6=null;
        JavascriptParser.logical_or_return logical_or3 =null;

        JavascriptParser.conditional_return conditional5 =null;

        JavascriptParser.conditional_return conditional7 =null;


        CommonTree AT_COND_QUE4_tree=null;
        CommonTree AT_COLON6_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:255:5: ( logical_or ( AT_COND_QUE ^ conditional AT_COLON ! conditional )? )
            // src/java/org/apache/lucene/expressions/js/Javascript.g:255:7: logical_or ( AT_COND_QUE ^ conditional AT_COLON ! conditional )?
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_logical_or_in_conditional757);
            logical_or3=logical_or();

            state._fsp--;

            adaptor.addChild(root_0, logical_or3.getTree());

            // src/java/org/apache/lucene/expressions/js/Javascript.g:255:18: ( AT_COND_QUE ^ conditional AT_COLON ! conditional )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AT_COND_QUE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // src/java/org/apache/lucene/expressions/js/Javascript.g:255:19: AT_COND_QUE ^ conditional AT_COLON ! conditional
                    {
                    AT_COND_QUE4=(Token)match(input,AT_COND_QUE,FOLLOW_AT_COND_QUE_in_conditional760); 
                    AT_COND_QUE4_tree = 
                    (CommonTree)adaptor.create(AT_COND_QUE4)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(AT_COND_QUE4_tree, root_0);


                    pushFollow(FOLLOW_conditional_in_conditional763);
                    conditional5=conditional();

                    state._fsp--;

                    adaptor.addChild(root_0, conditional5.getTree());

                    AT_COLON6=(Token)match(input,AT_COLON,FOLLOW_AT_COLON_in_conditional765); 

                    pushFollow(FOLLOW_conditional_in_conditional768);
                    conditional7=conditional();

                    state._fsp--;

                    adaptor.addChild(root_0, conditional7.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "conditional"


    public static class logical_or_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "logical_or"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:258:1: logical_or : logical_and ( AT_BOOL_OR ^ logical_and )* ;
    public final JavascriptParser.logical_or_return logical_or() throws RecognitionException {
        JavascriptParser.logical_or_return retval = new JavascriptParser.logical_or_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AT_BOOL_OR9=null;
        JavascriptParser.logical_and_return logical_and8 =null;

        JavascriptParser.logical_and_return logical_and10 =null;


        CommonTree AT_BOOL_OR9_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:259:5: ( logical_and ( AT_BOOL_OR ^ logical_and )* )
            // src/java/org/apache/lucene/expressions/js/Javascript.g:259:7: logical_and ( AT_BOOL_OR ^ logical_and )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_logical_and_in_logical_or787);
            logical_and8=logical_and();

            state._fsp--;

            adaptor.addChild(root_0, logical_and8.getTree());

            // src/java/org/apache/lucene/expressions/js/Javascript.g:259:19: ( AT_BOOL_OR ^ logical_and )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AT_BOOL_OR) ) {
                    alt2=1;
                }


                switch (alt2) {
                case 1 :
                    // src/java/org/apache/lucene/expressions/js/Javascript.g:259:20: AT_BOOL_OR ^ logical_and
                    {
                    AT_BOOL_OR9=(Token)match(input,AT_BOOL_OR,FOLLOW_AT_BOOL_OR_in_logical_or790); 
                    AT_BOOL_OR9_tree = 
                    (CommonTree)adaptor.create(AT_BOOL_OR9)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(AT_BOOL_OR9_tree, root_0);


                    pushFollow(FOLLOW_logical_and_in_logical_or793);
                    logical_and10=logical_and();

                    state._fsp--;

                    adaptor.addChild(root_0, logical_and10.getTree());

                    }
                    break;

                default :
                    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "logical_or"


    public static class logical_and_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "logical_and"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:262:1: logical_and : bitwise_or ( AT_BOOL_AND ^ bitwise_or )* ;
    public final JavascriptParser.logical_and_return logical_and() throws RecognitionException {
        JavascriptParser.logical_and_return retval = new JavascriptParser.logical_and_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AT_BOOL_AND12=null;
        JavascriptParser.bitwise_or_return bitwise_or11 =null;

        JavascriptParser.bitwise_or_return bitwise_or13 =null;


        CommonTree AT_BOOL_AND12_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:263:5: ( bitwise_or ( AT_BOOL_AND ^ bitwise_or )* )
            // src/java/org/apache/lucene/expressions/js/Javascript.g:263:7: bitwise_or ( AT_BOOL_AND ^ bitwise_or )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_bitwise_or_in_logical_and812);
            bitwise_or11=bitwise_or();

            state._fsp--;

            adaptor.addChild(root_0, bitwise_or11.getTree());

            // src/java/org/apache/lucene/expressions/js/Javascript.g:263:18: ( AT_BOOL_AND ^ bitwise_or )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AT_BOOL_AND) ) {
                    alt3=1;
                }


                switch (alt3) {
                case 1 :
                    // src/java/org/apache/lucene/expressions/js/Javascript.g:263:19: AT_BOOL_AND ^ bitwise_or
                    {
                    AT_BOOL_AND12=(Token)match(input,AT_BOOL_AND,FOLLOW_AT_BOOL_AND_in_logical_and815); 
                    AT_BOOL_AND12_tree = 
                    (CommonTree)adaptor.create(AT_BOOL_AND12)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(AT_BOOL_AND12_tree, root_0);


                    pushFollow(FOLLOW_bitwise_or_in_logical_and818);
                    bitwise_or13=bitwise_or();

                    state._fsp--;

                    adaptor.addChild(root_0, bitwise_or13.getTree());

                    }
                    break;

                default :
                    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "logical_and"


    public static class bitwise_or_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bitwise_or"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:266:1: bitwise_or : bitwise_xor ( AT_BIT_OR ^ bitwise_xor )* ;
    public final JavascriptParser.bitwise_or_return bitwise_or() throws RecognitionException {
        JavascriptParser.bitwise_or_return retval = new JavascriptParser.bitwise_or_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AT_BIT_OR15=null;
        JavascriptParser.bitwise_xor_return bitwise_xor14 =null;

        JavascriptParser.bitwise_xor_return bitwise_xor16 =null;


        CommonTree AT_BIT_OR15_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:267:5: ( bitwise_xor ( AT_BIT_OR ^ bitwise_xor )* )
            // src/java/org/apache/lucene/expressions/js/Javascript.g:267:7: bitwise_xor ( AT_BIT_OR ^ bitwise_xor )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_bitwise_xor_in_bitwise_or837);
            bitwise_xor14=bitwise_xor();

            state._fsp--;

            adaptor.addChild(root_0, bitwise_xor14.getTree());

            // src/java/org/apache/lucene/expressions/js/Javascript.g:267:19: ( AT_BIT_OR ^ bitwise_xor )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==AT_BIT_OR) ) {
                    alt4=1;
                }


                switch (alt4) {
                case 1 :
                    // src/java/org/apache/lucene/expressions/js/Javascript.g:267:20: AT_BIT_OR ^ bitwise_xor
                    {
                    AT_BIT_OR15=(Token)match(input,AT_BIT_OR,FOLLOW_AT_BIT_OR_in_bitwise_or840); 
                    AT_BIT_OR15_tree = 
                    (CommonTree)adaptor.create(AT_BIT_OR15)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(AT_BIT_OR15_tree, root_0);


                    pushFollow(FOLLOW_bitwise_xor_in_bitwise_or843);
                    bitwise_xor16=bitwise_xor();

                    state._fsp--;

                    adaptor.addChild(root_0, bitwise_xor16.getTree());

                    }
                    break;

                default :
                    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "bitwise_or"


    public static class bitwise_xor_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bitwise_xor"
    // src/java/org/apache/lucene/expressions/js/Javascript.g:270:1: bitwise_xor : bitwise_and ( AT_BIT_XOR ^ bitwise_and )* ;
    public final JavascriptParser.bitwise_xor_return bitwise_xor() throws RecognitionException {
        JavascriptParser.bitwise_xor_return retval = new JavascriptParser.bitwise_xor_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AT_BIT_XOR18=null;
        JavascriptParser.bitwise_and_return bitwise_and17 =null;

        JavascriptParser.bitwise_and_return bitwise_and19 =null;


        CommonTree AT_BIT_XOR18_tree=null;

        try {
            // src/java/org/apache/lucene/expressions/js/Javascript.g:271:5: ( bitwise_and ( AT_BIT_XOR ^ bitwise_and )* )
            // src/java/org/apache/lucene/expressions/js/Javascript.g:271:7: bitwise_and ( AT_BIT_XOR ^ bitwise_and )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_bitwise_and_in_bitwise_xor862);
            bitwise_and17=bitwise_and();

            state._fsp--;

            adaptor.addChild(root_0, bitwise_and17.getTree());

            // src/java/org/apache/lucene/expressions/js/Javascript.g:271:19: ( AT_BIT_XOR ^ bitwise_and )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==AT_BIT_XOR) ) {
                    alt5=1;
                }


                switch (alt5) {
                case 1 :
                    // src/java/org/apache/lucene/expressions/js/Javascript.g:271:20: AT_BIT_XOR ^ bitwise_and
                    {
                    AT_BIT_XOR18=(Token)match(input,AT_BIT_XOR,FOLLOW_AT_BIT_XOR_in_bitwise_xor865); 
                    AT_BIT_XOR18_tree = 
                    (CommonTree)adaptor.create(AT_BIT_XOR18)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(AT_BIT_XOR18_tree, root_0);


                    pushFollow(FOLLOW_bitwise_and_in_bitwise_xor868);
                    bitwise_and19=bitwise_and();

                    state._fsp--;

                    adaptor.addChild(root_0, bitwise_and19.getTree());

                    }
                    break;

                default :
                    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "bitwise_xor"


    public static class bitwise_and_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

